k8s/00-namespace-secrets.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bi-platform
